--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
+.pageTitle {
+    text-align: center;
+    margin-bottom: 100px;
+}
+
 .movie-list {
     width: 100%;
     height: 100%;
-}
-
-.movieTitle {
-    font-size: 24px;
-    text-align: center;
 }
 
 .movieSearch-frame {
@@ -18,19 +18,23 @@
     width: 300px;
     height: 40px;
     display: flex;
+    padding-left: 15px;
     align-items: center;
+    border-radius: 50px;
+    border: 1px solid gray;
 }
 
 .card-flex {
     width: 100%;
 	display: grid;
     row-gap: 100px;
-    grid-gap: 50px;
+    grid-gap: 100px;
     column-gap: 50px;
     place-items: center;
     grid-template-rows: auto;
     grid-template-columns: 1fr;
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 @media screen and (min-width: 700px){
@@ -51,31 +55,21 @@
     }
 }
 
-/* .movieCard {
-    width: 300px;
-    height: 620px;
-    border: 1px solid;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 15px;
-    border: 1px solid lightgray;
-} */
-
-.posterImg {
-    width: 250px;
-    height: 350px;
-}
-
 .textFrame {
     width: 100%;
 }
 
 .movieCard {
-    position: relative;
     width: 250px;
     height: 350px;
+    position: relative;
+}
+
+.posterImg {
+    width: 250px;
+    height: 350px;
+    border-radius: 20px;
+    border:  1px solid rgb(240, 240, 240);
 }
 
 .movieCard .posterImg {
@@ -88,6 +82,7 @@
     height: 100%;
     padding: 15px;
     color: #fff;
+    border-radius: 20px;
     box-sizing: border-box;
     background: rgba(0,0,0,0.5);
     transition: opacity 0.35s ease-in-out;
@@ -96,11 +91,13 @@
 
 .movieCard:hover .card-body {
     opacity: 1;
+    cursor: pointer;
 }
 
 .movieCard .card-body .movieTitle {
-    font-size: 24px;
+    font-size: 20px;
     overflow:hidden;
+    text-align: center;
     white-space: nowrap;
     padding-bottom: 0.4em;
     text-overflow: ellipsis;
