--- a/index.css
+++ b/index.css
@@ -1,122 +1,142 @@
+.movieHeader {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background-color: black;
+}
+
 .pageTitle {
-    text-align: center;
-    margin-bottom: 100px;
+  font-size: 30px;
+  font-weight: 800;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-align: center;
+  margin-bottom: 100px;
+  color: rgb(255, 255, 255);
+}
+
+#movieIcon {
+  margin-top: 30px;
+  color: rgb(255, 255, 255);
 }
 
 .movie-list {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .movieSearch-frame {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
 }
 
 .movieSearch {
-    width: 300px;
-    height: 40px;
-    display: flex;
-    padding-left: 15px;
-    align-items: center;
-    border-radius: 50px;
-    border: 1px solid gray;
+  width: 300px;
+  height: 40px;
+  display: flex;
+  padding-left: 15px;
+  align-items: center;
+  border-radius: 50px;
+  border: 1px solid gray;
 }
 
 .card-flex {
-    width: 100%;
-	display: grid;
-    row-gap: 100px;
-    grid-gap: 100px;
-    column-gap: 50px;
-    place-items: center;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr;
-    margin-top: 100px;
-    margin-bottom: 100px;
+  width: 100%;
+  display: grid;
+  row-gap: 100px;
+  grid-gap: 100px;
+  column-gap: 50px;
+  place-items: center;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
-@media screen and (min-width: 700px){
-    .card-flex {
-        grid-template-columns: 1fr 1fr ;
-    }
+@media screen and (min-width: 700px) {
+  .card-flex {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-@media screen and (min-width: 1000px){
-    .card-flex {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+@media screen and (min-width: 1000px) {
+  .card-flex {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 @media screen and (min-width: 1300px) {
-    .card-flex {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
+  .card-flex {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .textFrame {
-    width: 100%;
+  width: 100%;
 }
 
 .movieCard {
-    width: 260px;
-    height: 350px;
-    position: relative;
+  width: 260px;
+  height: 350px;
+  position: relative;
 }
 
-/* .posterImg {
-    width: 250px;
-    height: 350px;
-    border-radius: 20px;
-    border:  1px solid rgb(240, 240, 240);
-} */
-
 .movieCard .posterImg {
-    width: 100%;
-    border-radius: 20px;
+  width: 260px;
+  height: 350px;
+  border-radius: 20px;
 }
 
 .movieCard .card-body {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-    color: #fff;
-    border-radius: 20px;
-    box-sizing: border-box;
-    background: rgba(0,0,0,0.5);
-    transition: opacity 0.35s ease-in-out;
-    position: absolute; left: 0; bottom: 0;
+  opacity: 0;
+  width: 260px;
+  height: 350px;
+  padding: 15px;
+  color: #fff;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.35s ease-in-out;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .movieCard:hover .card-body {
-    opacity: 1;
-    cursor: pointer;
+  opacity: 1;
+  cursor: pointer;
 }
 
 .movieCard .card-body .movieTitle {
-    font-size: 20px;
-    overflow:hidden;
-    text-align: center;
-    white-space: nowrap;
-    padding-bottom: 0.4em;
-    text-overflow: ellipsis;
-    text-transform: uppercase;
+  font-size: 20px;
+  overflow: hidden;
+  text-align: center;
+  white-space: nowrap;
+  padding-bottom: 0.4em;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  margin-top: 20px;
 }
 
 .movieCard .card-body .movieOverview {
-    font-size: 16px;
-    overflow: hidden;
-    max-height: 9.8em;
-    text-align: center;
-    text-overflow: ellipsis;
+  font-size: 16px;
+  overflow: hidden;
+  max-height: 9.8em;
+  text-align: center;
+  text-overflow: ellipsis;
+  margin-top: 20px;
 }
 
 .movieCard .card-body .movieVote {
-    font-size: 14px;
-    text-align: center;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  margin-top: 40px;
 }
