--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import "./reset.css";
 
+.movie-list {
+  width: 100%;
+  height: 100%;
+}
+
 .movieHeader {
   width: 100%;
   height: 80px;
@@ -23,11 +28,6 @@
 #movieIcon {
   margin-top: 30px;
   color: rgb(255, 255, 255);
-}
-
-.movie-list {
-  width: 100%;
-  height: 100%;
 }
 
 .movieSearch-frame {
@@ -78,10 +78,6 @@
   }
 }
 
-.textFrame {
-  width: 100%;
-}
-
 .movieCard {
   width: 260px;
   height: 350px;
@@ -116,6 +112,7 @@
 
 .movieCard .card-body .movieTitle {
   font-size: 20px;
+  font-weight: 600;
   overflow: hidden;
   text-align: center;
   white-space: nowrap;
@@ -125,8 +122,12 @@
   margin-top: 20px;
 }
 
+.textFrame {
+  width: 100%;
+}
+
 .movieCard .card-body .movieOverview {
-  font-size: 16px;
+  font-size: 15px;
   overflow: hidden;
   max-height: 9.8em;
   text-align: center;
